--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
   background-color: #1e2124;
+  font-family: "Ubuntu", sans-serif;
 }
 #title {
   text-align: center;
@@ -54,7 +55,7 @@ hr {
   height: 200px;
   background-color: #36393e;
   color: #fff;
-  z-index: 9999;
+  z-index: 1;
   border-radius: 5px;
   display: none;
 }
@@ -77,7 +78,7 @@ hr {
   margin: 0 auto;
   position: relative;
   top: -10px;
-  width: 90px;
+  width: 110px;
   height: 50px;
   border-radius: 5px;
   background-color: #1e2124;
@@ -88,6 +89,7 @@ hr {
   font-size: 20px;
 }
 #answer button:active {
+  width: 115px;
   box-shadow: 0 0 0px 2.8px #7289da;
   border: 2.5px solid rgb(255, 255, 255);
 }
@@ -104,5 +106,229 @@ hr {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: -1;
+  z-index: 0;
+}
+#gear {
+  position: absolute;
+  top: 0;
+  margin-left: 205px;
+  margin-top: 20px;
+  outline: 0;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border-radius: 50%;
+}
+#gear img:hover {
+  background-color: #ffffff1b;
+  padding: 10px;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+#gear img:active {
+  background-color: #ffffff37;
+}
+#gear img {
+  padding: 10px;
+  width: 25px;
+  height: 25px;
+  transition-duration: 0.4s;
+  border-radius: 50%;
+}
+#settings {
+  display: none;
+  position: relative;
+  color: #fff;
+  width: 600px;
+  height: 400px;
+  margin: 0 auto;
+  margin-top: -475px;
+  background-color: #36393e;
+  z-index: 100;
+  border-radius: 10px;
+}
+#settings h1 {
+  position: relative;
+  top: 10px;
+  text-align: center;
+}
+#settings p {
+  text-align: center;
+}
+#settings select {
+  position: relative;
+  left: 270px;
+  width: 75px;
+  height: 40px;
+  border-radius: 5px;
+  background-color: #1e2124;
+  color: #fff;
+  transition-duration: 0.5ms;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#settings select:active {
+  border: 2px solid #fff;
+  box-shadow: 0 0 0 2.5px #7289da;
+  width: 75px;
+  height: 40px;
+}
+#closeBtn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  border: 0;
+  outline: 0;
+  background-color: transparent;
+  margin: 5px;
+  outline: 0;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border-radius: 50%;
+  transition-duration: 0.4s;
+}
+#closeBtn img:hover {
+  background-color: #ffffff1b;
+  padding: 10px;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+}
+#closeBtn img:active {
+  background-color: #ffffff2a;
+}
+#closeBtn img {
+  width: 25px;
+  height: 25px;
+  padding: 5px;
+  border-radius: 50%;
+  padding: 10px;
+  transition-duration: 0.5s;
+}
+
+.sbtn button {
+  position: absolute;
+  bottom: 0;
+  padding: 12px;
+  margin: 15px;
+  width: 95%;
+  border-radius: 10px;
+  background-color: #00c060;
+  outline: 0;
+  border: 0;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 1px;
+  transition-duration: 0.04s;
+}
+.sbtn button:active {
+  border: 2px solid #fff;
+  box-shadow: 0px 0px 0px 2.5px rgb(83, 83, 126);
+}
+
+.loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 54px;
+  height: 54px;
+  border-radius: 10px;
+  z-index: 3;
+}
+
+.loader div {
+  width: 8%;
+  height: 24%;
+  background: rgb(128, 128, 128);
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  opacity: 0;
+  border-radius: 50px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+  animation: fade458 1s linear infinite;
+}
+
+@keyframes fade458 {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0.25;
+  }
+}
+
+.loader .bar1 {
+  transform: rotate(0deg) translate(0, -130%);
+  animation-delay: 0s;
+}
+
+.loader .bar2 {
+  transform: rotate(30deg) translate(0, -130%);
+  animation-delay: -1.1s;
+}
+
+.loader .bar3 {
+  transform: rotate(60deg) translate(0, -130%);
+  animation-delay: -1s;
+}
+
+.loader .bar4 {
+  transform: rotate(90deg) translate(0, -130%);
+  animation-delay: -0.9s;
+}
+
+.loader .bar5 {
+  transform: rotate(120deg) translate(0, -130%);
+  animation-delay: -0.8s;
+}
+
+.loader .bar6 {
+  transform: rotate(150deg) translate(0, -130%);
+  animation-delay: -0.7s;
+}
+
+.loader .bar7 {
+  transform: rotate(180deg) translate(0, -130%);
+  animation-delay: -0.6s;
+}
+
+.loader .bar8 {
+  transform: rotate(210deg) translate(0, -130%);
+  animation-delay: -0.5s;
+}
+
+.loader .bar9 {
+  transform: rotate(240deg) translate(0, -130%);
+  animation-delay: -0.4s;
+}
+
+.loader .bar10 {
+  transform: rotate(270deg) translate(0, -130%);
+  animation-delay: -0.3s;
+}
+
+.loader .bar11 {
+  transform: rotate(300deg) translate(0, -130%);
+  animation-delay: -0.2s;
+}
+
+.loader .bar12 {
+  transform: rotate(330deg) translate(0, -130%);
+  animation-delay: -0.1s;
+}
+.loader-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1e2124;
+  z-index: 1;
 }
