--- a/styles.css
+++ b/styles.css
@@ -332,3 +332,52 @@ hr {
   background-color: #1e2124;
   z-index: 1;
 }
+#error {
+  margin: -400px auto;
+  width: 450px;
+  height: 200px;
+  background-color: #36393e;
+  color: #fff;
+  z-index: 1;
+  border-radius: 5px;
+  display: none;
+}
+#error h1 {
+  text-align: center;
+  position: relative;
+  top: 10px;
+  font-size: 45px;
+}
+#error p {
+  text-align: center;
+  position: relative;
+  top: -10px;
+  font-size: 20px;
+}
+#error button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  position: relative;
+  top: -10px;
+  width: 110px;
+  height: 50px;
+  border-radius: 5px;
+  background-color: #1e2124;
+  color: #fff;
+  outline: 0;
+  border: 0;
+  transition-duration: 0.3s;
+  font-size: 20px;
+}
+#error button:active {
+  width: 115px;
+  box-shadow: 0 0 0px 2.8px #7289da;
+  border: 2.5px solid rgb(255, 255, 255);
+}
+#error hr {
+  position: relative;
+  bottom: 12px;
+  width: 200px;
+}
